# multipeerconnectivity-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_mcpeerid_roundtrip.rs  01_smoke.rs  02_mcsession_properties.rs  03_mcnearbyserviceadvertiser_properties.rs  04_mcnearbyservicebrowser_properties.rs  05_mcadvertiserassistant_properties.rs  06_mcbrowserviewcontroller_properties.rs  07_mcerror_domain.rs  08_async_session_stream.rs  09_async_browser_stream.rs  10_async_advertiser_stream.rs
src/: advertiser.rs  advertiser_assistant.rs  async_api.rs  browser.rs  browser_view_controller.rs  error.rs  lib.rs  peer.rs  session.rs
src/ffi/: advertiser.rs  advertiser_assistant.rs  browser.rs  browser_view_controller.rs  core.rs  error.rs  mod.rs  peer.rs  session.rs
swift-bridge/: Package.swift
swift-bridge/Sources/MultipeerConnectivityBridge/: AsyncStream.swift  Core.swift  Error.swift  MCAdvertiserAssistant.swift  MCBrowserViewController.swift  MCNearbyServiceAdvertiser.swift  MCNearbyServiceBrowser.swift  MCPeerID.swift  MCSession.swift  MultipeerConnectivity.swift
tests/: async_stream_tests.rs  mcadvertiserassistant_tests.rs  mcbrowserviewcontroller_tests.rs  mcerror_tests.rs  mcnearbyserviceadvertiser_tests.rs  mcnearbyservicebrowser_tests.rs  mcpeerid_tests.rs  mcsession_tests.rs
