[package]
name = "multipeerconnectivity-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/multipeerconnectivity-rs"
repository = "https://github.com/doom-fish/multipeerconnectivity-rs"
description = "Safe Rust bindings for Apple's MultipeerConnectivity framework — peer IDs, sessions, browser/advertiser helpers, assistant UI, and browser controller on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["multipeer", "bonjour", "p2p", "networking", "macos"]
categories = ["api-bindings", "os::macos-apis", "network-programming"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "multipeerconnectivity"
crate-type = ["lib"]

[dependencies]
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
